Add Netlify attribute to forms in Register and Reservation pages

--- a/Register.html
+++ b/Register.html
@@ -32,7 +32,7 @@
           olmak için kayıt olun &#128521;
         </p>
         <div class="information">
-          <form class="form" action="information.php" method="post">
+          <form class="form" action="information.php" method="post" netlify>
             <div class="form-group">
               <label for="name">Adınız:</label>
               <input
