--- a/reservation.html
+++ b/reservation.html
@@ -29,7 +29,7 @@
         <h1>Rezervasyon</h1>
         <div class="reservation">
           
-          <form class="form" action="reservation.php" method="post">
+          <form class="form" action="reservation.php" method="post" netlify>
             <div class="form-group">
               <label for="name">Adınız:</label>
               <input
