Add accessibility attributes to navigation and forms across multiple pages

--- a/camp.html
+++ b/camp.html
@@ -13,23 +13,45 @@
         <label for="menu-toggle" class="hamburger">☰</label>
         <input type="checkbox" id="menu-toggle" />
         <nav class="navbar">
-          <a class="navlink home" href="./index.html">Anasayfa</a>
-          <a class="navlink camp" href="#">Kamp Alanı</a>
-          <a class="navlink reserv" href="./reservation.html">Rezervasyon</a>
-          <a class="navlink contact" href="./contact.html">İletişim</a>
-          <a class="navlink register" href="./Register.html">Kayıt Ol</a>
+          <a class="navlink home" href="./index.html" aria-label="home"
+            >Anasayfa</a
+          >
+          <a class="navlink camp" href="#" aria-label="camparea">Kamp Alanı</a>
+          <a
+            class="navlink reserv"
+            href="./reservation.html"
+            aria-label="reservation"
+            >Rezervasyon</a
+          >
+          <a class="navlink contact" href="./contact.html" aria-label="contact"
+            >İletişim</a
+          >
+          <a
+            class="navlink register"
+            href="./Register.html"
+            aria-label="register"
+            >Kayıt Ol</a
+          >
         </nav>
       </div>
       <div class="left-side">
-        <img class="mordor" src="./mordor.jpg" />
+        <img class="mordor" src="./mordor.jpg" alt="mordor" />
       </div>
 
       <div class="gallery">
         <!-- <h2>ORC'LARIMIZ</h2> -->
-        <a href="#img1"><img class="box1" src="./alavara3.jpg" /> </a>
-        <a href="#img2"><img class="box2" src="./alavara4.jpg" /> </a>
-        <a href="#img3"><img class="box3" src="./alavara5.jpg" /> </a>
-        <a href="#img4"><img class="box4" src="./alavara6.jpeg" /></a>
+        <a href="#img1" aria-label="campphoto"
+          ><img class="box1" src="./alavara3.jpg" alt="campphoto" />
+        </a>
+        <a href="#img2" aria-label="campphoto"
+          ><img class="box2" src="./alavara4.jpg" alt="campphoto" />
+        </a>
+        <a href="#img3" aria-label="campphoto"
+          ><img class="box3" src="./alavara5.jpg" alt="campphoto" />
+        </a>
+        <a href="#img4" aria-label="campphoto"
+          ><img class="box4" src="./alavara6.jpeg" alt="campphoto"
+        /></a>
       </div>
 
       <div id="img1" class="lightbox">
