--- a/Register.html
+++ b/Register.html
@@ -12,18 +12,34 @@
     </div>
     <div class="container">
       <div class="sidebar left-side">
-        <img class="mordor" src="./mordor.jpg" />
+        <img class="mordor" src="./mordor.jpg" alt="mordor" />
       </div>
       <div class="main">
         <div class="nav">
           <label for="menu-toggle" class="hamburger">☰</label>
           <input type="checkbox" id="menu-toggle" />
           <nav class="navbar">
-            <a class="navlink home" href="./index.html">Anasayfa</a>
-            <a class="navlink camp" href="./camp.html">Kamp Alanı</a>
-            <a class="navlink reserv" href="./reservation.html">Rezervasyon</a>
-            <a class="navlink contact" href="./contact.html">İletişim</a>
-            <a class="navlink register" href="#">Kayıt Ol</a>
+            <a class="navlink home" href="./index.html" aria-label="home"
+              >Anasayfa</a
+            >
+            <a class="navlink camp" href="./camp.html" aria-label="camparea"
+              >Kamp Alanı</a
+            >
+            <a
+              class="navlink reserv"
+              href="./reservation.html"
+              aria-label="reservation"
+              >Rezervasyon</a
+            >
+            <a
+              class="navlink contact"
+              href="./contact.html"
+              aria-label="contact"
+              >İletişim</a
+            >
+            <a class="navlink register" href="#" aria-label="register"
+              >Kayıt Ol</a
+            >
           </nav>
         </div>
         <h1>Kayıt ol</h1>
@@ -37,6 +53,7 @@
               <label for="name">Adınız:</label>
               <input
                 type="text"
+                aria-label="adınızı girin"
                 id="name"
                 name="name"
                 required
@@ -48,6 +65,7 @@
               <label for="email">E-posta:</label>
               <input
                 type="email"
+                aria-label="email adresinizi girin"
                 id="email"
                 name="email"
                 required
@@ -59,6 +77,7 @@
               <label for="phone">Telefon:</label>
               <input
                 type="tel"
+                aria-label="telefon numaranızı girin"
                 id="phone"
                 name="phone"
                 required
@@ -70,7 +89,7 @@
           </form>
         </div>
 
-        <button type="submit">Kayıt Ol</button>
+        <button type="submit" aria-label="kayıt ol">Kayıt Ol</button>
       </div>
     </div>
   </body>
