--- a/contact.html
+++ b/contact.html
@@ -16,18 +16,34 @@
     </div>
     <div class="container">
       <div class="sidebar left-side">
-        <img class="mordor" src="./mordor.jpg" />
+        <img class="mordor" src="./mordor.jpg" alt="mordor" />
       </div>
       <div class="main">
         <div class="nav">
           <label for="menu-toggle" class="hamburger">☰</label>
           <input type="checkbox" id="menu-toggle" />
           <nav class="navbar">
-            <a class="navlink home" href="./index.html">Anasayfa</a>
-            <a class="navlink camp" href="./camp.html">Kamp Alanı</a>
-            <a class="navlink reserv" href="./reservation.html">Rezervasyon</a>
-            <a class="navlink contact" href="#">İletişim</a>
-            <a class="navlink register" href="./Register.html">Kayıt Ol</a>
+            <a class="navlink home" href="./index.html" aria-label="home"
+              >Anasayfa</a
+            >
+            <a class="navlink camp" href="./camp.html" aria-label="camparea"
+              >Kamp Alanı</a
+            >
+            <a
+              class="navlink reserv"
+              href="./reservation.html"
+              aria-label="reservation"
+              >Rezervasyon</a
+            >
+            <a class="navlink contact" href="#" aria-label="contact"
+              >İletişim</a
+            >
+            <a
+              class="navlink register"
+              href="./Register.html"
+              aria-label="register"
+              >Kayıt Ol</a
+            >
           </nav>
         </div>
         <div class="contactbox">
@@ -37,6 +53,8 @@
             <li>
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d6173.008390137394!2d27.89222670131676!3d36.80278224407743!3m2!1i1024!2i768!4f13.1!5e1!3m2!1str!2str!4v1742243337611!5m2!1str!2str"
+                title="harita konumumuz"
+                aria-label="harita konumumuz"
                 width="600"
                 height="450"
                 style="border: 0"
@@ -49,26 +67,44 @@
             <li>
               <span>Sosyal Medya:</span>
               <div class="sosyal-medya">
-                <a href="https://facebook.com/kullaniciadi" target="_blank"
+                <a
+                  href="https://facebook.com/kullaniciadi"
+                  target="_blank"
+                  aria-label="facebookbutton"
                   ><i class="fab fa-facebook"></i
                 ></a>
-                <a href="https://twitter.com/kullaniciadi" target="_blank"
+                <a
+                  href="https://twitter.com/kullaniciadi"
+                  target="_blank"
+                  aria-label="twitterbutton"
                   ><i class="fab fa-twitter"></i
                 ></a>
-                <a href="https://instagram.com/kullaniciadi" target="_blank"
+                <a
+                  href="https://instagram.com/kullaniciadi"
+                  target="_blank"
+                  aria-label="instagrambutton"
                   ><i class="fab fa-instagram"></i
                 ></a>
-                <a href="https://linkedin.com/in/kullaniciadi" target="_blank"
+                <a
+                  href="https://linkedin.com/in/kullaniciadi"
+                  target="_blank"
+                  aria-label="linkedinbutton"
                   ><i class="fab fa-linkedin"></i
                 ></a>
-                <a href="https://youtube.com/kullaniciadi" target="_blank"
+                <a
+                  href="https://youtube.com/kullaniciadi"
+                  target="_blank"
+                  aria-label="youtubebutton"
                   ><i class="fab fa-youtube"></i
                 ></a>
               </div>
             </li>
             <li><span>E-posta:</span> info@isengard.com</li>
             <li>
-              <button onclick="window.location.href='mailto:info@isengard.com'">
+              <button
+                onclick="window.location.href='mailto:info@isengard.com'"
+                aria-label="posta gönder"
+              >
                 Posta Gönder
               </button>
             </li>
