--- a/reservation.html
+++ b/reservation.html
@@ -12,18 +12,18 @@
     </div>
     <div class="container">
       <div class="sidebar left-side">
-        <img class="mordor" src="./mordor.jpg" />
+        <img class="mordor" src="./mordor.jpg" alt="mordor"/>
       </div>
       <div class="main">
         <div class="nav">
           <label for="menu-toggle" class="hamburger">☰</label>
           <input type="checkbox" id="menu-toggle">
           <nav class="navbar">
-            <a class="navlink home" href="./index.html">Anasayfa</a>
-            <a class="navlink camp" href="./camp.html">Kamp Alanı</a>
-            <a class="navlink reserv" href="#">Rezervasyon</a>
+            <a class="navlink home" href="./index.html" aria-label="home">Anasayfa</a>
+            <a class="navlink camp" href="./camp.html" aria-label="camparea">Kamp Alanı</a>
+            <a class="navlink reserv" href="#" aria-label="reservation">Rezervasyon</a>
             <a class="navlink contact" href="./contact.html">İletişim</a>
-            <a class="navlink register" href="./Register.html">Kayıt Ol</a>
+            <a class="navlink register" href="./Register.html" aria-label="contact">Kayıt Ol</a>
           </nav>
         </div>
         <h1>Rezervasyon</h1>
@@ -33,7 +33,7 @@
             <div class="form-group">
               <label for="name">Adınız:</label>
               <input
-                type="text"
+                type="text" aria-label="adınızı girin"
                 id="name"
                 name="name"
                 required
@@ -44,7 +44,7 @@
             <div class="form-group">
               <label for="email">E-posta:</label>
               <input
-                type="email"
+                type="email" aria-label="email adresinizi girin"
                 id="email"
                 name="email"
                 required
@@ -55,7 +55,7 @@
             <div class="form-group">
               <label for="phone">Telefon:</label>
               <input
-                type="tel"
+                type="tel" aria-label="telefon numaranızı girin"
                 id="phone"
                 name="phone"
                 required
@@ -65,20 +65,20 @@
             <br />
             <div class="form-group">
               <label for="date">Tarih:</label>
-              <input type="date" id="date" name="date" required />
+              <input type="date" aria-label="tarih girin" id="date" name="date" required />
             </div>
             <br />
 
             <div class="form-group">
               <label for="people">Kişi Sayısı:</label>
-              <input type="number" id="people" name="people" required
+              <input type="number" aria-label="kişi sayısı girin" id="people" name="people" required
               placeholder="3"
             </div>
             <br />
           </form>
         </div>
         
-        <button type="submit">Rezervasyon Yap</button>
+        <button type="submit" aria-label="rezervasyon yap">Rezervasyon Yap</button>
 
         
       </div>
