Refactor styles and HTML structure for improved layout and accessibility across multiple pages

--- a/Register.html
+++ b/Register.html
@@ -42,7 +42,7 @@
             >
           </nav>
         </div>
-        <h1>Kayıt ol</h1>
+        <h1 class="titletext">KAYIT OL</h1>
         <p>
           Tüm aktivitelerden ve yaz-kış yapılan etkinliklerden sürekli haberdar
           olmak için kayıt olun &#128521;
