--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
           </nav>
         </div>
         <div class="contactbox">
-          <h1>İLETİŞİM</h1>
+          <h1 class="titletext">İLETİŞİM</h1>
           <ul>
             <li><span>Adres:</span> Mordor Yolu, Sauron Caddesi, Isengard</li>
             <li>
