--- a/reservation.html
+++ b/reservation.html
@@ -26,7 +26,7 @@
             <a class="navlink register" href="./Register.html" aria-label="contact">Kayıt Ol</a>
           </nav>
         </div>
-        <h1>Rezervasyon</h1>
+        <h1 class="titletext">REZERVASYON</h1>
         <div class="reservation">
           
           <form class="form" action="reservation.php" method="post" netlify>
